--- a/index.html
+++ b/index.html
@@ -22,8 +22,10 @@
 <br>
 <br>
 <footer>
+    <img id="profilepicture"
+    src="img/profile photo.png">
            <h2>Some things about Isa is that she loves exploring the city and this picture in 
-            the top right corner is from a time when her and her roommates went to the beach at
+            the middle left corner is from a time when her and her roommates went to the beach at
             night to light sparklers and fireworks. Isa is originally from the Central Valley, 
             from a small town called Waterford and left at the age of 18 for college and has since
              lived in SF. Currently majoring in Industrial Design, Isa enjoys the ability to be 
