--- a/inspirationPage/inspiration.html
+++ b/inspirationPage/inspiration.html
@@ -23,11 +23,10 @@
             politely sitting with her hands folded on a desk.">
             <br>
             <h4> He is a japanese artist born in 1959 who specializes in paintings
-                and sketches that are both innocnent but with heavier themes.
-            He inspires me with the simpliciity in his works. </h4>
+                and sketches that are both innocent but with heavier themes.
+            He inspires me with the simpliciity in his works and reminds me that not every art form needs to be intricate to be good. </h4>
             <br>
         <a href="https://en.wikipedia.org/wiki/Claude_Monet">Claude Monet</a>
-            <h3>Claude Monet</h3>
             <img src="img/monet.png" alt="One of many of Claude Monets depictions of water lilies
              in a green tinted lake painted in oil on canvas.">
             <br>
@@ -35,7 +34,6 @@
             referrence the beauty of nature in my designs cause they will forever be timeless. </h4>
             <br>
 <a href="https://en.wikipedia.org/wiki/Philip_Johnson">Philip Johnson</a>
-            <h3>Philip Johnson</h3>
             <img src="img/philipjohnson.png" alt="A glass house desinged by Philip Johnson
              pictured on a hillside with a lush forest and greenery surroudning it.">
             <br>
