commit final update

--- a/inspirationPage/inspiration.html
+++ b/inspirationPage/inspiration.html
@@ -31,14 +31,14 @@
              in a green tinted lake painted in oil on canvas.">
             <br>
             <h4>A French painnter born in 1840, Monet reminds me to never cease to 
-            referrence the beauty of nature in my designs cause they will forever be timeless. </h4>
+            referrence the beauty of nature in my designs cause they will forever be timeless His work is both captivating and peaceful with a consistent color palette. </h4>
             <br>
 <a href="https://en.wikipedia.org/wiki/Philip_Johnson">Philip Johnson</a>
             <img src="img/philipjohnson.png" alt="A glass house desinged by Philip Johnson
              pictured on a hillside with a lush forest and greenery surroudning it.">
             <br>
             <h4>An american architect born in 1906, Philip Johnson reminds me
-             to never stray away from designs that seem unconventional to society. </h4>
+             to never stray away from designs that seem unconventional to society. Here his glass house is able to connect people and nature despite its strange composition. </h4>
             </section>
 
            <footer>
