--- a/topFivePage/topFivePage.html
+++ b/topFivePage/topFivePage.html
@@ -13,24 +13,57 @@
             <a href="topFivePage.html">top fives</a>
         </section>
 
-            <h1>Top Five Places To Visit in SF</h1>
+            <h1>Top Five Places/Food To Visit in SF</h1>
             <h2>these are just a few things I have categorized throughout the years</h2>
-            <ul>
+            <ol>
                 <li><a href="https://www.sfjapantown.org/">Japantown</a></li>
-                <img src="img/japantown.png"
+                <h3>Japantown is one of my favorite spots because it has a lot of shops as well as restaurants for any occassion. Some of my
+                    favorite places inlclude Jina's Bakery as well as the bookstore!
+                </h3>
+                <img src="img/japantown.png">
                 <br>
                 <li><a href="https://www.parksconservancy.org/parks/ocean-beach">Ocean Beach</a></li>
-                <img src="img/oceanbeach.png"
+                <h3>I love Ocean Beach at night especially because it has a amazing view and is a great place to bring friends.</h3>
+                <img src="img/oceanbeach.png">
                 <br>
                 <li><a href="https://www.ferrybuildingmarketplace.com/">Market Street(ferry building)</a</li>
-                <img src="img/ferry building.png"
+                <h3>The ferry building will always be one of my top spots because its the first place my parents visited when coming to SF. It has good food
+                    and the farmers market is always nice to stroll around.
+                </h3>
+                <img src="img/ferry building.png">
                 <br>
                 <li><a href="https://sanfranciscoparksalliance.org/explore-parks/ina-coolbrith-park/">Ina Coolbrith Park at night</a</li>
-                <img src="img/inacoolbrith.png"
+                <h3>Has one of the best night views of SF and is easily accesible by Muni!</h3>
+                <img src="img/inacoolbrith.png">
                 <br>
                 <li><a href="https://www.sftravel.com/neighborhoods/chinatown">Chinatown</a</li>
-                <img src="img/chinatown.png"
+                <h3>Will always be a number one tourist spot but for good reason. The night markets are great with good food and entertainment.</h3>
+                <img src="img/chinatown.png">
                 <br>
-            </ul>
+                <br>
+                <br>
+            <h1>Top Food To Visit</h1>
+            <ol>
+                <li><a href="https://www.yelp.com/biz/katsuo-kombu-san-francisco">Katsuo & Kombu</a</li>
+                <h3>My top restaurant of all time;food is amazing,high quality,and fresh.</h3>
+                <img src="img/katsuo.png">
+                <br>
+                <li><a href="https://www.rocketsushisf.com">Rocket Sushi</a></li>
+                <h3> Best sushi place with the largest portions. I take my friends here all the time for a good dinner.</h3>
+                <img src="img/sushi.png">
+                <br>
+                <li><a href="https://www.wingstop.com/location/wingstop-2143-san-francisco-ca-94132/menu?y_source=1_NTYwODIzNjMtNzE1LWxvY2F0aW9uLndlYnNpdGU%3D">Wingstop</a></li>
+                <h3> Pretty self-explanatory; Amazing food with decet prices and is a must have for a late night in or after a long night out.</h3>
+                <img src="img/wingstop.png">
+                <br>
+                <li><a href="https://www.yelp.com/biz/casa-de-la-condesa-restaurant-san-francisco">Casa De La Condesa</a></li>
+                <h3>Hands down one of the best if not the best mexican spot in SF, my parents visit this spot everytime they visit for its authenticity and how it reminds them of home.</h3>
+                <img src="img/casa.png">
+                <br>
+                <li><a href="https://www.powdershavedsnow.com">Powder</a></li>
+                <h3>This is a shaved ice spot I discovered recently and have been going to often. Great options and portion for the price!</h3>
+                <img src="img/powder.png">
+            </ol>
+            </ol>
         </body>
 </html>
