commit pls be final

--- a/topFivePage/topFivePage.html
+++ b/topFivePage/topFivePage.html
@@ -26,17 +26,17 @@
                 <h3>I love Ocean Beach at night especially because it has a amazing view and is a great place to bring friends.</h3>
                 <img src="img/oceanbeach.png">
                 <br>
-                <li><a href="https://www.ferrybuildingmarketplace.com/">Market Street(ferry building)</a</li>
+                <li><a href="https://www.ferrybuildingmarketplace.com/">Market Street(ferry building)</a></li>
                 <h3>The ferry building will always be one of my top spots because its the first place my parents visited when coming to SF. It has good food
                     and the farmers market is always nice to stroll around.
                 </h3>
                 <img src="img/ferry building.png">
                 <br>
-                <li><a href="https://sanfranciscoparksalliance.org/explore-parks/ina-coolbrith-park/">Ina Coolbrith Park at night</a</li>
+                <li><a href="https://sanfranciscoparksalliance.org/explore-parks/ina-coolbrith-park/">Ina Coolbrith Park at night</a></li>
                 <h3>Has one of the best night views of SF and is easily accesible by Muni!</h3>
                 <img src="img/inacoolbrith.png">
                 <br>
-                <li><a href="https://www.sftravel.com/neighborhoods/chinatown">Chinatown</a</li>
+                <li><a href="https://www.sftravel.com/neighborhoods/chinatown">Chinatown</a></li>
                 <h3>Will always be a number one tourist spot but for good reason. The night markets are great with good food and entertainment.</h3>
                 <img src="img/chinatown.png">
                 <br>
