--- a/index.html
+++ b/index.html
@@ -5,45 +5,22 @@
         <title>Isa Jimenez</title>
         </head>
         <link rel="stylesheet" href="css/style.css">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Homemade+Apple&family=Molle&display=swap" rel="stylesheet">
         <body>
 
-<section>
-        <header>Menu</header>  
+<section>  
         <a href="index.html">home</a> 
-        <a href="inspirationPage/inspiration.html">inspiration</a>
-        <a href="topFivePage/topFivePage.html">top fives</a>
+        <a href="festivalInfoPage/festivallInfoPage.html">info</a>
+        <a href="sponsorPage/sponsorPage.html">sponsor</a>
     
             </section>
+           <h1> Welcome To Festival EcoMexico!</h1>
+           <img src="img/beige.png" alt="stock image for festival"
+           class="center">
 
-           <h1> Hi Welcome Home!</h1>
-           <p style="text-align: center;">
-           <img src="img/wave.gif" alt="two cartoon girls smiling and giving a thumbs up">
-           </p>
 <br>
 <br>
-<footer>
-    <img id="profilepicture"
-    src="img/profile photo.png">
-           <h2>Some things about Isa is that she loves exploring the city and this picture in 
-            the middle left corner is from a time when her and her roommates went to the beach at
-            night to light sparklers and fireworks. Isa is originally from the Central Valley, 
-            from a small town called Waterford and left at the age of 18 for college and has since
-             lived in SF. Currently majoring in Industrial Design, Isa enjoys the ability to be 
-             creative in the workplace compared to when she was a Computer Science Major. Unlike 
-             her hometown, city life is a big jump and is one that she really loves. A lot of people 
-             love to hate the city and its bad factors, but Isa loves the amount of opportunity the 
-             city provides people who look for it. There are endless possibilities, and she finds it
-              kind of crazy how good public transportation is here contrary to Waterford. Other things
-               about Isa is that she has a deep love for matcha and tends to make her own lattes at 
-               home since there are very few places that she finds are of good quality in the Bay 
-               Area. Isa has a fear of dogs, mainly bigger ones nowadays but has had many cats throughout
-                her life. Currently she has two cats, one named Kitty who is 7 years old and one named
-                 Michi who is 5 months old. Her goal after graduation is to travel the world before 
-                 settling down. She eventually wants to get an apartment in the city, get a Shiba Inu
-                 and a cat, and then ideally work as a Industrial Designer for Apple or at a smaller 
-                 design firm. In the end she hopes she can become a meaningful designer that is able 
-                 to provide for her immigrant parents who gave it there all to send her to college
-                  and to her older sister who supported her the whole time.</h2>
-        </footer>  
         </body>
 </html>
